Improve @arg-file processing in dev launcher
Stop processing argument when we reach application arguments

(cherry picked from commit 3398a08dd5bcb8a945d5eb6d73c7dbbf80c894bd)