@@ -402,19 +402,74 @@ public final class EspressoLauncher extends AbstractLanguageLauncher {
     }
 
     private List<String> expandAtFiles(List<String> arguments) {
+        // Expand @arg-file arguments until we reach application arguments
         List<String> expanded = null;
-        for (int i = 0; i < arguments.size(); i++) {
+        int i = 0;
+        for (; i < arguments.size(); i++) {
             String arg = arguments.get(i);
-            if (arg.startsWith("@")) {
+            if (arg.startsWith("@") && arg.length() > 1) {
                 if (expanded == null) {
                     expanded = new ArrayList<>(arguments.subList(0, i));
                 }
-                parseArgFile(arg.substring(1, arg.length()), expanded);
-            } else if (expanded != null) {
-                expanded.add(arg);
+                String argArg = arg.substring(1);
+                if (arg.charAt(1) == '@') {
+                    // escaped argument
+                    expanded.add(argArg);
+                } else {
+                    // Note, at the moment we don't detect the end of VM arguments
+                    // inside the arg file itself
+                    parseArgFile(argArg, expanded);
+                }
+            } else {
+                if (arg.startsWith("-")) {
+                    if (isWhiteSpaceOption(arg)) {
+                        // Skip the argument that follows this option
+                        if (expanded != null) {
+                            expanded.add(arg);
+                        }
+                        i++;
+                        arg = arguments.get(i);
+                    } else if ("--disable-@files".equals(arg) || arg.startsWith("--module=")) {
+                        break;
+                    }
+                } else {
+                    // We have reached the main class or the jar
+                    break;
+                }
+                if (expanded != null) {
+                    expanded.add(arg);
+                }
             }
         }
+        if (expanded != null && i < arguments.size()) {
+            expanded.addAll(arguments.subList(i, arguments.size()));
+        }
         return expanded == null ? arguments : expanded;
+    }
+
+    private static boolean isWhiteSpaceOption(String arg) {
+        return switch (arg) {
+            case "--module-path",
+                            "-p",
+                            "--upgrade-module-path",
+                            "--add-modules",
+                            "--enable-native-access",
+                            "--limit-modules",
+                            "--add-exports",
+                            "--add-opens",
+                            "--add-reads",
+                            "--patch-module",
+                            "--describe-module",
+                            "-d",
+                            "--source",
+                            "--module",
+                            "-m",
+                            "-classpath",
+                            "-cp",
+                            "--class-path" ->
+                true;
+            default -> false;
+        };
     }
 
     private void parseArgFile(String pathArg, List<String> expanded) {
